Agregar estado activo/inactivo a los productos y ocultarlos en ventas y compras cuando estén inactivos
